--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^1.1.4"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.7.0"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
@@ -13,7 +15,7 @@
     "react-dom": "^16.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "parcel build ./public/index.html",
+    "start": "parcel ./public/index.html"
   }
 }
