--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["env", "react"],
     "plugins": [
+      "transform-async-generator-functions",
       "transform-class-properties",
     ]
 }
